--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,28 +8,69 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
     </head>
     <body>
     <!-- Home -->
         <section class="header">
             <nav>
-                <a href="index.html"><img src="images/Logo.png"></a>
+                <a href="index.html"><img src="neverland-img/Logo.png"></a>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="">ABOUT</a></li>
-                        <li><a href="">COURSES</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="courses.html">COURSES</a></li>
                         <li><a href="">COACHES</a></li>
-                        <li><a href="">TOURNAMENT</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="tournament.html">TOURNAMENT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
             </nav>
-            <div class="text-box">
-                <h1> Greetings from the Neverland Camping! </h1>
+            <!-- <div class="text-box">
+                <h1>  </h1>
                 <p id="home-p">Badminton is not as challenging as you might believe. We'll be your guides!</p>
                 <a href="" class="hero-btn"> Visit Us To Know More </a>
-            </div>
+            </div> -->
         </section>
+        <div id="slider">
+            <div id="headerSlider" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                <li data-target="#headerSlider" data-slide-to="0" class="active"></li>
+                <li data-target="#headerSlider" data-slide-to="1"></li>
+                <li data-target="#headerSlider" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="neverland-img/banner.png" class="d-block img-fluid">
+                        <div class="carousel-caption">
+                            <h4> Greetings from the Neverland Camping! </h4>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="neverland-img/banner2.jpg" class="d-block img-fluid">
+                        <div class="carousel-caption">
+                            <h4> Together, Let's level up our game!</h4>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="neverland-img/banner2.jpg" class="d-block img-fluid">
+                        <div class="carousel-caption">
+                            <h4> Come to join with us! </h4>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#headerSlider" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
 
     <!-- Courses -->
         <section class="Courses">
@@ -60,16 +101,16 @@
             <p>Those who win several small and large prizes across the nation.</p>
             <div class="row">
                 <div class="coaches-col">
-                    <img src="images/CN coach.jpg">
+                    <img src="neverland-img/CN coach.jpg">
                     <div class="layer">
                         <h3>NGUYEN CONG NGUYEN</h3>
                     </div>
                 </div>
                 <div class="coaches-col">
-                    <img src="images/BD coach.jpg">
+                    <img src="neverland-img/BD coach.jpg">
                     <div class="layer">
                         <h3>DINH TRAN GIA BAO</h3>
-                    </div>
+                    </div>    
                 </div>
             </div>
         </section>
@@ -80,17 +121,17 @@
             <p> We eprovide any weekly, monthly, and yearly tournaments here, along with all the background information.<br> Feel free to choose one to participate in if it matches your strength.</p>
             <div class="row">
                 <div class="tournament-col">
-                    <img src="images/nam winning.jpg">
+                    <img src="neverland-img/nam winning.jpg">
                     <h3>some description</h3>
                     <p>detail description</p>
                 </div>
                 <div class="tournament-col">
-                    <img src="images/anh Bo winning.jpg">
+                    <img src="neverland-img/anh Bo winning.jpg">
                     <h3>some description</h3>
                     <p>detail description</p>
                 </div>
                 <div class="tournament-col">
-                    <img src="images/nu winning.jpg">
+                    <img src="neverland-img/nu winning.jpg">
                     <h3>some description</h3>
                     <p>detail description</p>
                 </div>
@@ -102,7 +143,7 @@
         <h1> What our student says</h1>
         <div class="row">
             <div class="rc-col">
-                <img src="images/user1.jpg">
+                <img src="neverland-img/user1.jpg">
                 <div>
                     <p>This course is great! Since enrolling, I have advanced significantly. The head coaches are very energetic and engaging.</p>
                     <h3>student 1</h3>
@@ -114,7 +155,7 @@
                 </div>
             </div>
             <div class="rc-col">
-                <img src="images/user2.jpg">
+                <img src="neverland-img/user2.jpg">
                 <div>
                     <p>I enjoy this class. I've made significant improvements, and now when I play badminton, I feel more confident. The trainers are very knowledgeable and lovely.</p>
                     <h3>student 2</h3>
@@ -131,7 +172,7 @@
     <!-- Enroll -->
     <section class="Enroll">
         <h1> ENROLL FOR OUR COURSES</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
+        <a href="contact.html" class="hero-btn">CONTACT US</a>
     </section>
 
     <!-- Footer -->
